--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MoveMedicalScheduleApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MoveMedicalScheduleApp" parent="Theme.MaterialComponents.DayNight.NoActionBar"  />
+
+    <style name="Theme.DatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <!-- Date Picker Color -->
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <!-- Date Number Color-->
+        <item name ="colorOnSurface">@color/black</item>
+        <item name ="colorSurface">@color/white</item>
+        <item name ="colorContainer">@color/white</item>
+    </style>
+
+    <style name="Theme.TimePicker" parent="ThemeOverlay.MaterialComponents.TimePicker">
+        <!-- Date Picker Color -->
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <!-- Date Number Color-->
+        <item name ="colorOnSurface">@color/black</item>
+        <item name ="colorSurface">@color/white</item>
+        <item name ="colorContainer">@color/white</item>
+    </style>
+
 </resources>
