--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,22 +5,21 @@
 
     <style name="Theme.DatePicker" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
         <!-- Date Picker Color -->
-        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimary">@color/purple40</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Date Number Color-->
-        <item name ="colorOnSurface">@color/black</item>
+        <item name ="colorOnSurface">@color/onSurface</item>
         <item name ="colorSurface">@color/white</item>
-        <item name ="colorContainer">@color/white</item>
+        <item name ="colorContainer">@color/purpleGrey40</item>
     </style>
 
     <style name="Theme.TimePicker" parent="ThemeOverlay.MaterialComponents.TimePicker">
         <!-- Date Picker Color -->
-        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimary">@color/purple40</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Date Number Color-->
-        <item name ="colorOnSurface">@color/black</item>
+        <item name ="colorOnSurface">@color/onSurface</item>
         <item name ="colorSurface">@color/white</item>
-        <item name ="colorContainer">@color/white</item>
+        <item name ="colorContainer">@color/purpleGrey40</item>
     </style>
-
 </resources>
